--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 Your browser does not support the audio element.
 </audio>
 
+XXXXXXXX <br> XXXXOgg Should work XXXXX 
+audio controls>
+  <source src="ideal.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+
+XXXXXXXX <br> XXXX MP3 Should workXXXXX 
+
 XXXXXXXX <br> XXXXShould workXXXXX 
 <audio controls>
-  <source src="audio/ideal.wav" type="audio/wav">
+  <source src="audio/ideal.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio>
 
