--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Your browser does not support the audio element.
 
 XXXXXXXX <br> XXXXShould workXXXXX 
 <audio controls>
-  <source src="audio/ideal.mp3" type="audio/mpeg">
+  <source src="ideal.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
