--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html>
 <body>
-<br><br>
+
+
+
+<br>XXXXXXXX <br> XXXX MP3 Should workXXXXX 
+
+XXXXXXXX <br> XXXXShould workXXXXX 
 <audio controls>
-  <source src="ideal.wav" type="audio/wav">
+  <source src="ideal.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-<br><br>
 
-
-<br>yyyyyyy <br> yyyyyyyyy <br>
-    <audio controls style="width: 100px; height: 20px;">  <source src="ideal.wav" type="audio/wav"/>  </audio>
-  
-<br>yyyy222yyy <br> yyyyyyyyy <br>
-  <audio controls src="audio/ideal.wav"></audio>
-  
-<br>yyyy333yyy <br> yyyyyyyyy <br>  
-<audio width="300" height="32" ><source src="ideal.wav" type="audio/wav" /></audio>
-  
-
+<br>yyyyyyy <br> yyyyyyyyy <br
 </body>
 </html>
