--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ rain poured down and created a flood.”</p>
 	<tr valign="top">
 		<td width="131" height="43" style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0.1cm; padding-bottom: 0.1cm; padding-left: 0.1cm; padding-right: 0cm"><p>
 			mumbling
-			<audio controls style="width: 100px; height: 20px;">  <source src="ideal.mp3" type="audio/mpeg"/>  </audio>
+			<audio controls style="width: 100px; height: 30px;">  <source src="audio/ideal.ogg" type="audio/ogg"/>  </audio>
 			</p>
 			<p><br/>
 
