--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ writing, and using text to speech technology. For example:
 		</td>
 		<td width="217" bgcolor="#ffffff" style="background: #ffffff; border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0cm; padding-bottom: 0.05cm; padding-left: 0.05cm; padding-right: 0cm"><p class="western" align="center">
 			<font face="Microsoft Uighur">a</font></p>
-			<audio controls style="width: 100px; height: 30px;">  <source src="audio/c1.mp3" type="audio/mpeg"/>  </audio>
+			<audio controls style="width: 100px; height: 30px;">  <source src="audio/c1.mp3" type="audio/mpeg"/>  </audio></p>
 		</td>
 		<td width="70" bgcolor="#ffffff" style="background: #ffffff; border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0cm; padding-bottom: 0.05cm; padding-left: 0.05cm; padding-right: 0cm"><p class="western" align="center">
 			<font face="Microsoft Uighur">/æ/</font></p>
@@ -140,8 +140,8 @@ writing, and using text to speech technology. For example:
 			<font face="Microsoft Uighur">except for “alter, all, overall”</font></p>
 		</td>
 		<td width="457" bgcolor="#ffffff" style="background: #ffffff; border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0cm; padding-bottom: 0.05cm; padding-left: 0.05cm; padding-right: 0.05cm"><p class="western" align="left">
-			<font face="Microsoft Uighur">cat, sat, bat, hat, have, has, had</font></p>
-			<audio controls style="width: 100px; height: 30px;">  <source src="audio/S1.mp3" type="audio/mpeg"/>  </audio>
+			<font face="Microsoft Uighur">cat, sat, bat, hat, have, has, had</font>
+			<audio controls style="width: 100px; height: 30px;">  <source src="audio/S1.mp3" type="audio/mpeg"/>  </audio></p>
 		</td>
 	</tr>
 	<tr valign="bottom">
